tests/semantic_errors/sasha61_3.tl
-- test case 61.
-- Description : undef function

-- Expected : '3'
require "ifj21" 
function main(life : boolean) : boolean                  
   return foo()                                          
end                                                      

